fix grid gap

--- a/instagram/settings/styles/container.css
+++ b/instagram/settings/styles/container.css
@@ -119,7 +119,7 @@
 .container__articles {
   display: grid;
   grid-template-columns: repeat(3, minmax(200px, 300px));
-  gap: 25px;
+  gap: 0 25px;
   justify-content: center;
 }
 
@@ -127,6 +127,7 @@
   width: 300px;
   height: 300px;
   position: relative;
+  margin-bottom: 25px;
 }
 
 .articles img {
